force-app/main/default/objects/Loss_Year__c/Loss_Year__c.object-meta.xml
<CustomObject>
    <label>Loss Year</label>
    <nameField>
        <displayFormat>LY-{0000}</displayFormat>
        <label>Loss Year</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loss Year</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>