force-app/main/default/objects/Loss_Year__c/fields/Aged_Years__c.field-meta.xml
<CustomField>
    <fullName>Aged_Years__c</fullName>
    <formula>Total_Aged_Months__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aged Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>