force-app/main/default/objects/Loss_Year__c/fields/Average_Losses_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Average_Losses_Per_Year__c</fullName>
    <formula>IF( 
Total_Losses__c =0,0,Total_Losses__c / Aged_Years__c)</formula>
    <label>Average Losses Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>