force-app/main/default/objects/Loss_Year__c/fields/Developed_Losses__c.field-meta.xml
<CustomField>
    <fullName>Developed_Losses__c</fullName>
    <formula>Total_Losses__c  *  LDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developed Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>