force-app/main/default/objects/Loss_Year__c/fields/Incurred_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Loss_Ratio__c</fullName>
    <formula>(Total_Losses__c /Proposal__r.Average_Aged_Years__c )/ Proposal__r.Underwriting_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incurred Loss Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>