force-app/main/default/objects/Loss_Year__c/fields/LDF__c.field-meta.xml
<CustomField>
    <fullName>LDF__c</fullName>
    <label>LDF</label>
    <summarizedField>Loss_Year_Evaluation__c.LDF__c</summarizedField>
    <summaryForeignKey>Loss_Year_Evaluation__c.Loss_Year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>