force-app/main/default/objects/Loss_Year__c/fields/of_Claims__c.field-meta.xml
<CustomField>
    <fullName>of_Claims__c</fullName>
    <label># of Claims</label>
    <summarizedField>Loss_Year_Evaluation__c.of_Claims__c</summarizedField>
    <summaryForeignKey>Loss_Year_Evaluation__c.Loss_Year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>