force-app/main/default/objects/Loss_Year__c/fields/Program_Year__c.field-meta.xml
<CustomField>
    <fullName>Program_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipName>UW_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>