force-app/main/default/objects/Loss_Year__c/fields/Selected_Losses__c.field-meta.xml
<CustomField>
    <fullName>Selected_Losses__c</fullName>
    <label>Selected Losses</label>
    <summarizedField>Loss_Year_Evaluation__c.Selected_Losses__c</summarizedField>
    <summaryForeignKey>Loss_Year_Evaluation__c.Loss_Year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>