force-app/main/default/objects/Loss_Year__c/fields/Total_Aged_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Aged_Months__c</fullName>
    <label>Total Aged Months</label>
    <summarizedField>Loss_Year_Evaluation__c.Aged_Months__c</summarizedField>
    <summaryForeignKey>Loss_Year_Evaluation__c.Loss_Year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>