force-app/main/default/objects/Loss_Year__c/fields/Total_Losses__c.field-meta.xml
<CustomField>
    <fullName>Total_Losses__c</fullName>
    <formula>(Total_Reserves__c + Total_Paid__c) - Excluded_Losses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>