force-app/main/default/objects/Loss_Year__c/fields/Total_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserves__c</fullName>
    <label>Total Reserves</label>
    <summarizedField>Loss_Year_Evaluation__c.Total_Reserves__c</summarizedField>
    <summaryForeignKey>Loss_Year_Evaluation__c.Loss_Year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>